--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ button {
     font-weight: 500;
     font-size: 48px;
     background-color: rgb(15, 15, 15);
-    color: rgb(156, 198, 133);
+    color: chartreuse;
     border-bottom: 4px solid rgb(43, 43, 43);
     border-right: 4px solid rgb(43, 43, 43);
 }
@@ -40,7 +40,7 @@ button {
     height: 112px;
     width: 314px ;
     margin-bottom: 40px;
-    background-color: rgb(43, 43, 43);
+    background-color: rgb(15, 15, 15);
     display: flex;
     justify-content: end;
     align-items: end;
